# faceless-video-api

./: .env.example  .gitignore  LICENSE  README.md  config.json  log_conf.yaml  pyproject.toml  requirements.txt
app/: config.json  main.py
app/api/endpoints/: auth.py  image.py  video.py
app/constants/: story_types.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  image.py  image_task.py  user.py  video.py  video_task.py
app/schemas/: image.py  video.py
app/scripts/: run_init_db.py
app/services/: audio_generator.py  image_api.py  image_generator.py  image_task_processor.py  storage.py  story_generator.py  video_creator.py  video_generator.py  video_task_processor.py
app/utils/: helpers.py  image_utils.py  transitions.py
docs/: api.md
